RESOLVED FIXED314222
REGRESSION(312023@main): [AppKit Gestures] Broke some text selection flows controlled by WKTextSelectionController
https://bugs.webkit.org/show_bug.cgi?id=314222
Summary REGRESSION(312023@main): [AppKit Gestures] Broke some text selection flows co...
Abrar Rahman Protyasha
Reported 2026-05-06 11:58:23 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2026-05-06 12:03:04 PDT
EWS
Comment 2 2026-05-06 12:59:48 PDT
Committed 312731@main (4cece8dcf075): <https://commits.webkit.org/312731@main> Reviewed commits have been landed. Closing PR #64383 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.