REGRESSION(312023@main): [AppKit Gestures] Broke some text selection flows controlled by WKTextSelectionController https://bugs.webkit.org/show_bug.cgi?id=314222 rdar://176317069

Reviewed by Tim Horton.

Support for gesture recognizer-initiated drag sessions in 312023@main
broke some text selection flows -- rdar://problems/176317590&176317069.

This patch makes the regressing commit a no-op by not adding this
gesture to the web view. A future commit, tracked by rdar://176383341,
will introduce a more targeted fix and re-enable the drag gesture.

* Source/WebKit/UIProcess/mac/WKAppKitGestureController.mm:
(-[WKAppKitGestureController addGesturesToWebView]):
(-[WKAppKitGestureController enableGesturesIfNeeded]):

Canonical link: https://commits.webkit.org/312731@main